# automatic

./: Cargo.toml  README.md
src/: interactive_list.rs  lib.rs  main.rs  promiscuous_list.rs  run.rs  runitem.rs  runner.rs  script.rs  silent_list.rs
tests/: test_script.yaml  test_script_for_run.yaml  test_script_for_run_interactive.yaml  test_script_for_run_silent.yaml
