[package]
name = "automatic"
version = "0.1.0"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
description = "FSM for programms"
edition = "2018"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
yaml-rust = "0.4.3"
