[package]
name = "automatic"
version = "0.0.2"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
description = "FSM for programms"
edition = "2018"
keywords = ["automatization"]
repository = "https://github.com/no111u3/automatic"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
clap = "2.33.0"
yaml-rust = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
