[package]
name = "automatic"
version = "0.0.4"
authors = ["Boris Vinogradov <no111u3@gmail.com>"]
description = "automatic run command throw user defined scripts"
edition = "2018"
keywords = ["automatization", "utility"]
repository = "https://github.com/no111u3/automatic"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
os_pipe = "0.8"
